@@ -5,6 +5,7 @@ Log of changes:	tilp (cables, calcs, files, ticonv)
 - 09/06/2006, version 0.15 (0.1.1, 0.2.0, 0.1.5, 0.0.3): roms
 	- use reworked dirlist API
 	- updated TiLP to follow the slightly modified FLASH app dirlist format
+	- fixed 'bug' #1499672: sorting by name is case insensitive on Windows for now.
 
 - 28/05/2006, version 0.14 (0.1.0, 0.1.3, 0.1.4, 0.0.3): roms
 	- fixed USB device reconnection
